--- a/cesium-ion-revit/Cesium.Ion.Revit.csproj
+++ b/cesium-ion-revit/Cesium.Ion.Revit.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ProgressDialog.xaml.cs">
       <DependentUpon>ProgressDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RevitAuthServer.cs" />
     <Compile Include="UploadDialog.xaml.cs">
       <DependentUpon>UploadDialog.xaml</DependentUpon>
     </Compile>
